--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -111,3 +111,19 @@
     opacity: 1;
     transition: 0.4s opacity;
 }
+
+.loading{
+    position: absolute;
+    top: 70px;
+    width: 100%;
+    z-index: 99;
+}
+.loading span{
+    display: inline-block;
+    background-color: #fff;
+    border: 1px solid silver;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 6px 25px;
+    border-radius: 5px;
+}
